# src/controller/index.ts
@@ -1,6 +1,8 @@
-export * from './auth';
-export * from './error';
+export * from './catalog/v1/get-plans';
 export * from './system/v1/get-config';
 export * from './system/v1/get-healthcheck';
 export * from './user/v1/post-register';
 export * from './user/v1/get-profile';
+
+export * from './auth';
+export * from './error';
